--- a/src/components/Sidebar/sidebar.scss
+++ b/src/components/Sidebar/sidebar.scss
@@ -1,30 +1,33 @@
-
 .sidebar {
-    background: $lighter;
-    background: linear-gradient(to bottom, $lighter, $darker);
-    padding: 25px;
-    color: $white;
-    
-    .heading {
-        font-size: 1.2em;
-    }
+  background: $lighter;
+  background: linear-gradient(to bottom, $lighter, $darker);
+  padding: 25px;
+  color: $white;
 
-    ul {
-        list-style-type: none;
-        
-        li {
-            a {
-                color: $white;
-                text-decoration: none;                
+  .heading {
+    font-size: 1.2em;
+  }
 
-                &.active { 
-                    text-decoration: underline;
-                }
-            }
+  ul {
+    list-style-type: none;
+
+    li {
+      a {
+        color: $white;
+        text-decoration: none;
+
+        &.active {
+          text-decoration: underline;
         }
+
+        &:hover {
+          text-decoration: underline;
+        }
+      }
     }
-    
-    @media (min-width: $large-screen) {
-        margin-right: 15px;
-    }
+  }
+
+  @media (min-width: $large-screen) {
+    margin-right: 15px;
+  }
 }
